# structform

./: Cargo.toml  README.md
.semaphore/: semaphore.yml
src/: lib.rs
structform/: Cargo.toml
structform-derive/: Cargo.toml
structform-derive/src/: lib.rs
structform/src/: lib.rs  numeric_input.rs  text_input.rs
structform/tests/: custom_submit_function_example.rs  login_example.rs  subforms_example.rs  submit_attempted_example.rs  validation_example.rs
tests/: list_of_subforms_example.rs  submit_attempted_example.rs
