[package]
name = "structform-derive"
description = "Derive macros used by StructForm."
version = "0.1.0"
edition = "2018"
repository = "https://github.com/panoptix-za/structform"
license = "MIT/Apache-2.0"
keywords = ["form", "web", "gui"]
categories = ["web-programming", "gui"]
authors = [
  "Justin Wernick <justin.wernick@panoptix.io>",
  "Panoptix OSS maintainers <oss@panoptix.io>",
]

[lib]
proc-macro=true

[dependencies]
syn="2"
quote="1"
